# toniowm

./: Cargo.toml  LICENSE  README.md  start-xephyr.sh  sxhkdrc  toniorc  xinitrc
hack/: sxhkdrc  toniorc  xinitrc
src/: args.rs  atoms.rs  client.rs  commands.rs  config.rs  ewmh.rs  icccm.rs  layout.rs  main.rs  state.rs  vector.rs  window_manager.rs
