[package]
name = "toniowm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
xcb = { version = "1.2.1" }
crossbeam = { version = "0.8.2" }
serde_json = "1.0"
indexmap = "1.9"
